src/test/deca/syntax/valid/test_synt/class_sans_method/declaration_class_extends.deca
// Description:
//    Test de déclaration de class
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur
//
// Historique:
//    cree le 11/01/2022

{
    public class coordonneesPlan{
        private int x;
        private int y;
    }
    public class coordonneesSpace extends coordonneesPlan{
        private int z;
    }
}